--- a/css/default.css
+++ b/css/default.css
@@ -10,6 +10,10 @@ body {
     margin: 0;
 }
 
+h1, p {
+    cursor: default;
+}
+
 /* NAVIGATION: */
 
 .navigation {
@@ -43,7 +47,7 @@ body {
 }
 
 .logo {
-    display: block;
+    display: inline-block;
     margin-left: 15px;
     margin-top: 10px;
 }
@@ -81,36 +85,13 @@ body {
 
 /* NAVIGATION */
 
-/*SLIDESHOW*/
-.slideshow {
-    position: relative;
-}
-
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 45%;
-    padding: 10px;
-    font-weight: bolder;
-    font-size: 36px;
-    color: white;
-    outline-style: solid;
-    background: #131127;
-}
-
-.next {
-    right: 0;
-}
-
-/*SLIDESHOW*/
-
 /* footer bottom */
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     /*padding-left: 25% ;*/
-    background-image: linear-gradient(to right, #7918FE, #131127);
+    background-color: #131127;
     /*background: #7918FE;*/
     height: auto;
 }
