All Categories Added
All the categories of products have been added, not the products themselves. The banners for each have been updated.

--- a/css/banner.css
+++ b/css/banner.css
@@ -18,13 +18,26 @@
 }
 
 #manga {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/banner/banner manga.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../img/banner/banner manga.jpg");
 }
 
 #dvd {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/banner/banner dvd.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../img/banner/banner dvd.jpg");
 }
 
 #figures {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/banner/banner figures.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../img/banner/banner figures.jpg");
+}
+
+#games {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../img/banner/banner games.jpg");
+}
+
+#accessories {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../img/banner/banner accessories.jpg");
 }
