Fixed footer colour problem
Previously, when the footer was resized the colour would not increase with the footer so there would be a transparent background halfway through. This has been update and now the background stays dark blue every time the user resizes the window.

--- a/css/admin.css
+++ b/css/admin.css
@@ -60,7 +60,11 @@ h1{
 
 p {
 font-family: Arial;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
+
+
 
 .addForm{
   /* This is the whole form, I want to move it to the middle of the page and make it more customizable */
@@ -73,4 +77,6 @@ font-family: Arial;
   top: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+    padding-top: 50px;
 }
+
