--- a/css/help.css
+++ b/css/help.css
@@ -22,9 +22,11 @@
     background-color: #131127;
 }
 
-.content {
-    border-radius: 0 0 12px 0;
-    padding: 8px 18px;
+.information {
+    color: white;
+    font-family: Arial;
+    border-radius: 0 0 12px 12px;
+    padding: 8px 40px;
     display: none;
     overflow: hidden;
     background-color: #7918FE;
@@ -33,8 +35,34 @@
 }
 
 h2 {
+    font-family: Arial;
     color: white;
     padding-left: 25%;
     margin-bottom: -18px;
     padding-top: 18px;
 }
+
+table {
+    background-color:#131127 ;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: #7918FE;
+    padding-top: 30px;
+    font-family: arial;
+    width: 30%;
+}
+
+td, th {
+    background-color: #131127;
+    color: white;
+    text-align: left;
+    padding: 8px;
+}
+
+a {
+    text-decoration: none;
+    color: salmon;
+}
+
+
