--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: linear-gradient(to right, #F7CAC9, #FA8072);
+    /*background-image: linear-gradient(to right, #F7CAC9, #FA8072);*/
     background-color: white;
     /*Position relative and min height sets the page container. This helps keep the footer (child element)
     at 0 or the bottom based on absolute position.*/
