--- a/css/help.css
+++ b/css/help.css
@@ -1,7 +1,3 @@
-.faq {
-    width: 100%;
-}
-
 .section {
     border-radius: 12px 12px 0 0;
     background-color: #383273;
@@ -9,7 +5,7 @@
     cursor: pointer;
     padding: 18px;
     width: 50%;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 25%;
     margin-right: 25%;
     border: none;
@@ -36,10 +32,11 @@
 
 h2 {
     font-family: Arial;
-    color: white;
+    color: #131127;
     padding-left: 25%;
     margin-bottom: -18px;
-    padding-top: 18px;
+    padding-top: 30px;
+    padding-bottom: 20px;
 }
 
 table {
