--- a/css/products display.css
+++ b/css/products display.css
@@ -1,12 +1,15 @@
 .products_gallery {
-    display: flex;
+    display: inline-block;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: center;
-    align-items: center;
     margin: 50px 0;
 }
 
 .content {
+    margin-left: 20px;
+    margin-top: 20px;
     width: 20%;
+    height: 300px;
+    background-color: #131127;
+    border-radius: 12px;
 }
