added buttons to products

--- a/css/products display.css
+++ b/css/products display.css
@@ -2,7 +2,6 @@
     display: inline-block;
     flex-wrap: wrap;
     width: 100%;
-    margin: 50px 0;
 }
 
 .content {
@@ -12,4 +11,31 @@
     height: 300px;
     background-color: #131127;
     border-radius: 12px;
+}
+
+.add-button {
+    /* the add button is the submit button */
+    display: block;
+    width: 180px;
+    height: 45px;
+    border: none;
+    background: linear-gradient(to right, #FE8C68 , #FFDBFD);
+    background-size: 200%;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    transition: .5s;
+    border-radius: 10px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    text-align: center;
+}
+
+.add-button:hover{
+    background-position: right;
+    /* when the user hovers above it this property makes it look animated */
 }
