--- a/css/products display.css
+++ b/css/products display.css
@@ -45,3 +45,30 @@
     background-position: right;
     /* when the user hovers above it this property makes it look animated */
 }
+
+.clear {
+    /* the add button is the submit button */
+    display: block;
+    width: 145px;
+    height: 45px;
+    border: none;
+    background: linear-gradient(to right, #FE8C68, #FFDBFD);
+    background-size: 200%;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    transition: .5s;
+    border-radius: 10px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 20px;
+    text-align: center;
+}
+
+.clear:hover {
+    background-position: right;
+    /* when the user hovers above it this property makes it look animated */
+}
