--- a/css/login.css
+++ b/css/login.css
@@ -8,6 +8,7 @@
     left: 50%;
     transform: translateX(-50%);
     margin-top: 60px;
+    margin-bottom: 40px;
     border-style: solid;
     border-color: #7918FE;
 }
