--- a/css/signup.css
+++ b/css/signup.css
@@ -9,6 +9,7 @@
     left: 50%;
     transform: translateX(-50%);
     margin-top: 60px;
+    margin-bottom: 40px;
     border-style: solid;
     border-color: #7918FE;
 }
