--- a/css/main footer.css
+++ b/css/main footer.css
@@ -1,21 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html, body {
-    height: 100%;
-}
-
-#container {
-    min-height: 100%;
-}
-
-#main {
-    padding-bottom: 7.2rem;
-    overflow: auto;
-}
-
 /* footer bottom */
 #footer {
     position: relative;
@@ -28,6 +10,8 @@ html, body {
     background-color: #131127;
     /*background: #7918FE;*/
 }
+/*sets all the styling for the button*/
+/*sets bottom to 0 so its at the bottom of the page*/
 
 footer :is(a, ul, h1){
     color: white;
@@ -37,11 +21,13 @@ footer :is(a, ul, h1){
     font-family: Arial, serif;
     text-align: left;
 }
+/*targets multiple elements*/
 
 .footer_container {
     text-align: center;
     background-color: #131127;
 }
+/*this aligns everything to the center of the footer*/
 
 footer a:hover {
     color: salmon;
@@ -52,6 +38,7 @@ footer a:hover {
     margin-left: 35px;
     margin-right: 35px;
 }
+/*this styles each section of the footer*/
 
 .help {
     display: inline-block;
