--- a/css/products display.css
+++ b/css/products display.css
@@ -18,6 +18,7 @@
     height: 300px;
     background-color: #131127;
     border-radius: 12px;
+    margin-bottom: 12px;
 }
 /*this styles each product card*/
 
